# simplyBlockDeploy

./: .dockerignore  .gitignore  1-master-3-node.yaml  3-master-3-node.yaml  842_outputs.json  CLAUDE.md  README.md  api.tf  bootstrap-cluster.sh  bootstrap-k3s.sh  build_image.sh  cluster_create.sh  cluster_metadata.json  components.sh  config  create_cluster.sh  data.tf  dev.tfvars  docker-compose-dev.yml  efs.tf  eks.tf  errored.tfstate  first_analysis.md  grafana.tf  instances.yaml  local.env  locals.tf  main.py  main.tf  notes.md  notes.txt  outputs.tf  prod.tfvars  provider.tf  publish-upstreams.sh  requirements.txt  setup.py  setup.sh  shutdown-cluster.sh  shutdown-restart.sh  (+11 more)
sbcli/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  backlog.md  docker-compose-test.yml  failure-analysis.md  migration_test_metadata.json  pyproject.toml  requirements.txt  type-requirements.txt
sbcli/docker/: Dockerfile  Dockerfile.alpine-tools  Dockerfile_base
sbcli/docs/: talos.md
sbcli/e2e/: README.md  e2e.py  requirements.txt
sbcli/scripts/: aws_capacity_namespace_churn_soak.py  aws_dual_node_outage_soak_mixed_churn.py  aws_dual_node_outage_soak_multipath_full.py  aws_nic_failover_soak.py  check_active_tasks.py  check_remote_status_7934.py  clear_stale_lvstore_status.py  extract_spdk_critical.py  fix_sns.py  merge_logs.py  probe_nvme_queues.py  refresh_cluster_maps_once.py  send_online_events_for_mismatches.py  send_raw_online_events_for_mismatches.py  setup_perf_test.py  setup_perf_test1.py  setup_perf_test_3node.py  setup_perf_test_multipath.py  ssh_run.py  upload_to_mgmt.py  (+3 more)
(+2414 files in other folders)
