[build-system]
requires = ['setuptools>70']
build-backend = 'setuptools.build_meta'

[tool.ruff]
extend-exclude = ['simplyblock_cli/cli.py']

[tool.mypy]
check_untyped_defs = true
follow_untyped_imports = true
exclude = ['simplyblock_web/test']

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ['simplyblock_core/test', 'simplyblock_web/test', 'tests']
norecursedirs = ['tests/perf']
